--- a/frontend/src/app/core/navigator/navigator.component.html
+++ b/frontend/src/app/core/navigator/navigator.component.html
@@ -1,13 +1,13 @@
 <nav class="nav">
   <ul class="menu row">
     <li class="menu-item" routerLink="">
-      <p class="important">Testimónios</p>
+      <p class="important">Testimonios</p>
     </li>
     <li class="menu-item" routerLink="">
-      <p class="important">Experiéncia</p>
+      <p class="important">Experiencia</p>
     </li>
     <li class="menu-item" routerLink="">
-      <p class="important">Sobre Mí</p>
+      <p class="important">Sobre mí</p>
     </li>
     <li class="menu-item" routerLink="">
       <p class="important">Contacto</p>
