--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-header></app-header>
+<div class="site column">
+  <app-header></app-header>
+  <div class="layout row-center">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
+</div>
