--- a/frontend/src/app/core/navigator/navigator.component.html
+++ b/frontend/src/app/core/navigator/navigator.component.html
@@ -1,15 +1,18 @@
 <nav class="nav">
   <ul class="menu row">
-    <li class="menu-item" routerLink="">
+    <li class="menu-item" routerLink="/home" routerLinkActive="active">
+      <p class="important">Inicio</p>
+    </li>
+    <li class="menu-item" routerLink="/testimonials" routerLinkActive="active">
       <p class="important">Testimonios</p>
     </li>
-    <li class="menu-item" routerLink="">
+    <li class="menu-item" routerLink="/experience" routerLinkActive="active">
       <p class="important">Experiencia</p>
     </li>
-    <li class="menu-item" routerLink="">
+    <li class="menu-item" routerLink="/me" routerLinkActive="active">
       <p class="important">Sobre mí</p>
     </li>
-    <li class="menu-item" routerLink="">
+    <li class="menu-item" routerLink="/contact" routerLinkActive="active">
       <p class="important">Contacto</p>
     </li>
   </ul>
