--- a/frontend/src/styles/_colors.scss
+++ b/frontend/src/styles/_colors.scss
@@ -1,14 +1,15 @@
-$background: #BBBBBB;
-$component: #D4D4D4;
+$background: #bbbbbb;
+$component: #d4d4d4;
 $border: #737373;
 $shadow: #292929;
 
-$main-color: #FF6F3C;
+$main-color: #ff6f3c;
+$secondary-color: #ff7d4d;
 
-$black-color: #0B0B0D;
-$white-color: #F5F5F5;
+$black-color: #0b0b0d;
+$white-color: #f5f5f5;
 
-$error-color: #D92027;
-$info-color: #3498DB;
-$success-color: #54E346;
-$warning-color: #FFC93C;
+$error-color: #d92027;
+$info-color: #3498db;
+$success-color: #54e346;
+$warning-color: #ffc93c;
