--- a/frontend/src/styles/_override.scss
+++ b/frontend/src/styles/_override.scss
@@ -5,3 +5,15 @@ ul {
 a {
   text-decoration: none;
 }
+
+textarea {
+  text-align: justify;
+  background-color: $component;
+  border: 1px solid $border;
+  overflow: hidden;
+  resize: none;
+
+  &::placeholder {
+    color: $black-color;
+  }
+}
