FEATURE: Settings style folder

--- a/frontend/src/styles/settings/_color.scss
+++ b/frontend/src/styles/settings/_color.scss
@@ -1,10 +1,7 @@
-$background: #d4d4d4;
-$component: #bbbbbb;
-$border: #737373;
-$shadow: #292929;
+$background: #292929;
 
-$main-color: #ff6f3c;
-$secondary-color: #ff7d4d;
+$main-color: #6930c3;
+$secondary-color: #a685e2;
 
 $black-color: #0b0b0d;
 $white-color: #f5f5f5;
