REFACTOR: Style index refactorized

--- a/frontend/src/styles/_index.scss
+++ b/frontend/src/styles/_index.scss
@@ -1,8 +1,5 @@
-@import "animations";
-@import "colors";
-@import "classes";
-@import "fonts";
-@import "functions";
-@import "mixins";
-@import "override";
-@import "variables";
+@import "elements/index.scss";
+@import "settings/index.scss";
+@import "functions/index.scss";
+@import "utilities/index.scss";
+@import "objects/index.scss";
